--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ ul {
   color: var(--color-bg);
   text-align: center;
 }
-.sub__logo{
+.sub__logo {
   color: var(--color-yellow);
 }
 
@@ -95,10 +95,9 @@ ul {
   justify-content: space-evenly;
   margin-top: 3rem;
 }
-.img__cover{
+.img__cover {
   background-color: var(--color-yellowLight);
   border-radius: 1rem;
-
 }
 .service img {
   display: flex;
@@ -129,26 +128,26 @@ ul {
   background: var(--color-yellowLight);
   justify-content: space-between;
 }
-.promo__text{
+.promo__text {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: auto;
 }
-.promo__text h1{
+.promo__text h1 {
   font-size: 6rem;
   color: var(--color-bg);
 }
 
 /* review section */
-.reviews{
+.reviews {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
-.review img{
+.review img {
   height: 5rem;
   width: 5rem;
   border-radius: 3rem;
@@ -157,7 +156,7 @@ ul {
   position: relative;
   bottom: 3rem;
 }
-.review{
+.review {
   background: var(--color-yellowLight);
   display: flex;
   flex-direction: column;
@@ -166,35 +165,36 @@ ul {
   border-radius: 1.5rem;
   text-align: center;
 }
-.review h3, p{
+.review h3,
+p {
   text-align: center;
   color: var(--color-bg);
   margin-bottom: 1rem;
 }
 
 /* footer sect */
-footer{
+footer {
   background: #2e2f5b;
 }
-.footer__section{
+.footer__section {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-a{
+a {
   text-decoration: none;
   color: var(--color-yellowLight);
   padding-bottom: 0.5rem;
 }
-footer ul{
-display: flex;
-flex-direction: column;
+footer ul {
+  display: flex;
+  flex-direction: column;
 }
-footer li{
+footer li {
   color: var(--color-yellowLight);
   padding-bottom: 0.5rem;
 }
-footer h3{
+footer h3 {
   color: var(--color-yellow);
   font-size: 1.5rem;
   padding-bottom: 0.5rem;
@@ -202,36 +202,37 @@ footer h3{
 
 @media screen and (max-width: 600px) {
   /* nav section */
-  .nav{
+  .nav {
     flex-direction: column;
+    padding-bottom: 2rem;
   }
-  .btn{
-    width: 10rem;
+  .btn {
+    width: 8rem;
     margin: auto;
     margin-top: 1rem;
   }
 
   /* hero section */
-  .hero__section{
+  .hero__section {
     flex-direction: column;
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
-  .wallet{
+  .wallet {
     width: 15rem;
     margin: auto;
   }
-  .hero__img{
+  .hero__img {
     display: none;
   }
 
   /* services section */
-  .services{
+  .services {
     flex-direction: column;
     margin: auto;
     margin-bottom: 2rem;
   }
-  .service{
+  .service {
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -239,31 +240,31 @@ footer h3{
   }
 
   /* promo section */
-  .promo{
+  .promo {
     flex-direction: column;
   }
-  .promo__img{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
+  .promo__img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
-  .promo__text h1{
+  .promo__text h1 {
     text-align: center;
     font-size: 4rem;
   }
-  
+
   /* review section */
-  .reviews{
+  .reviews {
     flex-direction: column;
   }
-  .review{
+  .review {
     margin: 1rem;
     margin-bottom: 3rem;
     width: 90%;
   }
 
   /* footer section */
-  .footer__section{
+  .footer__section {
     display: flex;
     flex-direction: column;
     text-align: center;
